# auto-world-rules

./: .gitignore  LICENSE  README.md
RunFunsearchEvo/: .gitignore  .uv.toml  README.md  pyproject.toml  read_me_uv_env.md
RunFunsearchEvo/DeepMindCodeReference/implementation/: code_manipulation.py  config.py  evaluator.py  programs_database.py
RunFunsearchEvo/Funsearch/Collaterals/: NoRa1.1.txt  PrioStoryGeneratorNoRa1_1.py  skeleton.txt  story_query_generator_nora1_1.py
RunFunsearchEvo/Funsearch/Collaterals/FullFlowconfigs/: configAD_served_qwen3-next.json
RunFunsearchEvo/Funsearch/Evaluator/: eval_utils.py  evaluator.py  model.py  train.py  unique_labels.pkl
RunFunsearchEvo/Funsearch/FullFlow/: EvaluatorMock.py  FullFlowParallel_llm_client.py  __init__.py  run_FullFlowParallel_llm_client_sbatch.sh
RunFunsearchEvo/Funsearch/GraphWranglingMethods/: ADDING_FUNCTIONS.md  __init__.py  parsing.py  path_analysis.py  structure.py
RunFunsearchEvo/Funsearch/LLM/: __init__.py
RunFunsearchEvo/Funsearch/MultiRoundEvalTrainer/: helpers.py  post_round_processing.py  rescore_database.py  resume_run.py  train_evaluator_for_next_round.py
RunFunsearchEvo/Funsearch/ProgramsDB/: __init__.py  discovery_event_logger.py  discovery_tracker.py
RunFunsearchEvo/Funsearch/Sampler/: __init__.py  process_llm_generation.py  sampler.py  samplerVLLMClient.py
RunFunsearchEvo/Funsearch/utils/: calculate_difficulty.py  config_loader.py  database_initialization.py  database_resets.py  database_sharding.py  inspect_database.py  logging_utils.py  parallel_process_helper_vllmclient.py
RunFunsearchEvo/WhenNoPathsLeadToRome/utils/: FindDerivationForPositiveProgram.py  clean_up_data.py  wrangle_derivations.py  wrangle_derivations2.py
setup_vllm/: README.md  (+3 more)
(+14 files in other folders)
