[project]
name = "auto-world-rules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "absl-py>=2.3.1",
    "clingo>=5.8.0",
    "ipython>=9.9.0",
    "networkx>=3.6.1",
    "numpy>=1.24,<2.0",
    "pandas>=2.3.3",
    "protobuf>=3.20.0",
    "pydantic>=2.12.5",
    "regex>=2025.11.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.1.99",
    "transformers>=4.57.5,<5.0.0",
    "typing-extensions>=4.15.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "edget",
    "WhenNoPathsLeadToRome",
    "funsearch",
]

[tool.hatch.build.targets.sdist]
include = [
    "edget",
    "WhenNoPathsLeadToRome",
    "funsearch",
    "Funsearch",
]

[tool.hatch.build.targets.wheel.force-include]
"Funsearch/Evaluator" = "Evaluator"
"Funsearch/Sampler" = "Sampler"
"Funsearch/ProgramsDB" = "ProgramsDB"
"Funsearch/FullFlow" = "FullFlow"
"Funsearch/utils" = "utils"
"Funsearch/LLM" = "LLM"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
gpu = [
  "torch==2.3.0",        # IMPORTANT: no +cu121 here
  "lightning>=2.6.0",
  "pytorch-lightning>=2.6.0",
  "accelerate>=0.25.0",
  "bitsandbytes>=0.41.0",
]
llm = [
  "transformers>=4.38.0,<5.0.0",   # Cap at <5.0.0 for bitsandbytes compatibility
  "accelerate>=0.25.0",
  "bitsandbytes>=0.41.0",
  "sentencepiece>=0.1.99",
  "protobuf>=3.20.0",
]
[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
